--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+venv3.8/
 
 # Spyder project settings
 .spyderproject
@@ -136,3 +137,6 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+media/
+.idea/
